# nero

./: Cargo.toml  LICENSE  README.md
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/simple/src/messenger/: mod.rs  views.rs
examples/simple/static/css/: style.css
nero/: Cargo.toml
nero-admin/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
nero-admin/frontend/src/: App.tsx  api.ts  index.css  main.tsx  route.ts
nero-admin/frontend/src/api/: IAuthApi.ts  index.ts
nero-admin/frontend/src/components/: AppCard.tsx  AppRouter.tsx  Header.tsx  ModelTable.tsx  RequestWrap.tsx  ServerError.tsx  Sider.tsx
nero-admin/frontend/src/hooks/: useAction.ts
nero-admin/frotend/: package-lock.json  package.json
nero-admin/frotend/src/: App.css  App.tsx  index.tsx
nero-admin/nero-admin/: Cargo.toml
nero-admin/nero-admin/src/: interfaces.rs  lib.rs
nero-admin/nero-admin/src/models/: admin_user.rs  mod.rs
nero-admin/nero-admin/src/views/: all_record.rs  apps.rs  getsettings.rs  login.rs  mod.rs  record.rs  settings.rs
nero-core/: Cargo.toml
nero-core/src/: error.rs  main.rs  server.rs
nero-derive/: Cargo.toml
nero-derive/src/: lib.rs
nero-util/: Cargo.toml
nero-util/src/: auth.rs  cookie.rs  encode.rs  error.rs  http.rs  lib.rs
nero/src/: app.rs  error.rs  lib.rs  project.rs  request.rs  responder.rs  server.rs  settings.rs  urlpatterns.rs  view.rs
nero/src/apps/: cors.rs  filestatic.rs  mod.rs  not_found.rs
nero/src/db/: fieldargs.rs  mod.rs  model.rs  scheme.rs
test/: request.py
(+52 files in other folders)
