[package]
name = "nero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nero-core = { path = "../nero-core" }
nero-util = { path = "../nero-util" }
tokio = { version = "1.29.1", features = ["full"] }