[package]
name = "nero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nero-util = { path = "../nero-util" }
nero-derive = { path = "../nero-derive" }
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.72"
walkdir = "2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = "1.0.0-beta.9"
once_cell = "1.18.0"
serde_qs = "0.12.0"
lazy_static = "1.4.0"