[package]
name = "nero-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nero = { path = "../../nero" }
nero-util = { path = "../../nero-util" }
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.72"
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"